; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_tunnel_test.c_proxy_thread.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_tunnel_test.c_proxy_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SOCK_CLOEXEC = common dso_local global i32 0, align 4
@connection_count = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @proxy_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @proxy_thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to i32*
  store i32* %7, i32** %3, align 8
  br label %8

8:                                                ; preds = %16, %15, %1
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @SOCK_CLOEXEC, align 4
  %12 = call i32 @accept4(i32 %10, i32* null, i32* null, i32 %11)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp eq i32 %13, -1
  br i1 %14, label %15, label %16

15:                                               ; preds = %8
  br label %8

16:                                               ; preds = %8
  %17 = call i32 (...) @vlc_savecancel()
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @proxy_client_process(i32 %18)
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @vlc_close(i32 %20)
  %22 = load i32, i32* @connection_count, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* @connection_count, align 4
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @vlc_restorecancel(i32 %24)
  br label %8
}

declare dso_local i32 @accept4(i32, i32*, i32*, i32) #1

declare dso_local i32 @vlc_savecancel(...) #1

declare dso_local i32 @proxy_client_process(i32) #1

declare dso_local i32 @vlc_close(i32) #1

declare dso_local i32 @vlc_restorecancel(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
